# yaiden

./: .editorconfig  .flake8  .gitignore  .pylintrc  README.md  meson.build  yaiden.py
.github/workflows/: build-and-test.yml
.reuse/: dep5
data/: io.github.stephanlachnit.yaiden.desktop  io.github.stephanlachnit.yaiden.metainfo.xml  meson.build
po/: LINGUAS  POTFILES  generate-potfiles.sh  meson.build
yaiden/: application.py  file_opener.py
yaiden/ui_classes/: __init__.py  about_dialog.py  editor.py  editor_notebook.py  editor_tab_source_view.py  editor_terminal.py  header_bar.py  header_bar_menu.py  main_window.py  preferences_window.py  sidebar.py  sidebar_item_file_tree.py  toolbar.py
